--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -56,7 +56,7 @@
         <input type="text" placeholder="Gym ID" id="climbDetails-gymId">
         <input type="text" placeholder="Notes" id="climbDetails-notes">
 
-        <button type="submit">Create Route</button>
+        <button type="submit">Create Climb Details</button>
 
     </form>
 
