--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+
+    <h1>Get Data</h1>
+
+    <button id="fetch-users">Get All Users</button>
+    <ul id="get-objects-list"></ul>
+    <p id="get-request-error-message"></p>
+
     <h1>User Creation</h1>
 
     <form id="user-creation-form">
