added new feature to search routes by gym id, completed get requests for users, gyms, routes on front end

--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -11,8 +11,18 @@
     <h1>Get Data</h1>
 
     <button id="fetch-users">Get All Users</button>
+    <button id="fetch-gyms">Get All Gyms</button>
+    <form id="fetch-routes">
+        <input type="text" placeholder="Gym ID" id="get-route-gym-id">
+        <button type="submit">Get Routes</button>
+    </form>
+
+    
+  
     <ul id="get-objects-list"></ul>
     <p id="get-request-error-message"></p>
+
+    
 
     <h1>User Creation</h1>
 
