--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -86,6 +86,8 @@
 
     <h1>Data Update</h1>
 
+    <p> User </p>
+
     <form id="user-update-form">
         <input type="text" placeholder="User ID" id="update-user-id">
         <input type="text" placeholder="First Name" id="update-first-name">
@@ -99,10 +101,80 @@
         <button type="submit">Update User</button>
     </form>
 
+    <p> Gym </p>
+
+    <form id="gym-update-form">
+        <input type="text" placeholder="Gym ID" id="update-gym-id">
+        <input type="text" placeholder="Gym Name" id="update-gym-name">
+        <input type="text" placeholder="Gym Address" id="update-gym-address">
+        
+        <button type="submit">Update Gym</button>
+
+    </form>
+
+    <p> Route </p>
+
+    <form id="route-update-form">
+        <input type="text" placeholder="Route ID" id="update-route-id">
+        <input type="text" placeholder="Route Grade" id="update-route-grade">
+        <input type="text" placeholder="Route Setter" id="update-route-setter">
+        <input type="text" placeholder="Route Color" id="update-route-color">
+
+        <button type="submit">Update Route</button>
+
+    </form>
+
+    <p> Climb Details </p>
+
+    <form id="climbDetails-update-form">
+        <input type="text" placeholder="Climb Detail ID" id="update-climbDetails-id">
+        <input type="text" placeholder="Route ID" id="update-climbDetails-routeId">
+        <input type="text" placeholder="Gym ID" id="update-climbDetails-gymId">
+        <input type="text" placeholder="Notes" id="update-climbDetails-notes">
+
+        <button type="submit">Update Climb Details</button>
+
+    </form>
+
+
     <p id="update-message"></p> <!-- User feedback message -->
+
+
+    <h1>Data Deletion</h1>
+
+    <p> User </p>
+
+    <form id="user-delete-form">
+        <input type="text" placeholder="User ID" id="delete-user-id">
+        <button type="submit">Delete User</button>
+    </form>
+
+    <p> Route </p>
+
+    <form id="route-delete-form">
+        <input type="text" placeholder="Route ID" id="delete-route-id">
+        <button type="submit">Delete Route</button>
+    </form>
+
+    <p> Gym </p>
+
+    <form id="gym-delete-form">
+        <input type="text" placeholder="Gym ID" id="delete-gym-id">
+        <button type="submit">Delete Gym</button>
+    </form>
+
+    <p> Climb Details </p>
+
+    <form id="climb-details-delete-form">
+        <input type="text" placeholder="Climb Detail ID" id="delete-climb-detail-id">
+        <button type="submit">Delete Climb Detail</button>
+    </form>
+
 
     <script type="text/javascript" src="../scripts/script.js"></script>
 
 
+
+    
 </body>
 </html>
