finished delete reqs

--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -170,6 +170,7 @@
         <button type="submit">Delete Climb Detail</button>
     </form>
 
+    <p id="delete-message"></p> <!-- User feedback message -->
 
     <script type="text/javascript" src="../scripts/script.js"></script>
 
