added climb details page and headesr

--- a/clombFrontEnd/index.html
+++ b/clombFrontEnd/index.html
@@ -8,6 +8,10 @@
 
 <body>
 
+    <button onclick="window.location.href='/users'">Users</button>
+    <button onclick="window.location.href='/gyms'">Gyms</button>
+    <button onclick="window.location.href='/routes'">Routes</button>
+    <button onclick="window.location.href='/climbdetails'">Climb Details</button>
     
     <h1>Get Data</h1>
 
